--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </a>
                 <nav>
                     <ul class="nav-list">
-                        <li><a href="#about">About me</a></li>
+                        <li><a href="#about">About</a></li>
                         <li><a href="#Works">Works</a></li>
                         <li><a href="#institution">Study</a></li>
                         <li><a href="#Service">Service</a></li>
@@ -50,7 +50,7 @@
             <div id="wrapper">
                 <section id="about">
                     <div class="wr-top">
-                        <h2>About me</h2>
+                        <h2>About</h2>
                         <p>わたしについて</p>
                     </div>
                     <div class="c-list">
