--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </a>
                 <nav>
                     <ul class="nav-list">
-                        <li><a href="#about">About</a></li>
+                        <li><a href="#concept">Concept</a></li>
                         <li><a href="#Works">Works</a></li>
                         <li><a href="#institution">Study</a></li>
                         <li><a href="#Service">Service</a></li>
@@ -48,10 +48,10 @@
         <main id="main">
             <div id="particales-js"></div>
             <div id="wrapper">
-                <section id="about">
+                <section id="concept">
                     <div class="wr-top">
-                        <h2>About</h2>
-                        <p>わたしについて</p>
+                        <h2>Concept</h2>
+                        <p>コンセプト</p>
                     </div>
                     <div class="c-list">
                         <div class="c-title">
@@ -60,17 +60,12 @@
                         <div class="c-text">
                             <h3>クライアントの理想をカタチにする</h3>
                             <p>
-                                岡田　章太郎
-                                1996年12月24日生まれ<br>
-                                仕事は人生の3分の1を占める...。<br>
-                                この言葉を聞いてから、ただ働くことが嫌になり、<br>
-                                どうせ働かなければならないのなら<br>
-                                興味のあることで好きな事で<br>
-                                食べていきたいと感じました。<br>
-                                完全独学で技術習得のため勉強を続けてきましたが、<br>
-                                一つの技術だけでは完成できないWeb制作<br>
-                                の奥深さや楽しさに魅了され<br>
-                                Web制作の道を目指しました。<br>
+                                クライアントの思い描く理想のWebサイトを<br>
+                                目で見える形に作り上げる。<br>
+                                私の役割は作り上げたものを通して<br>
+                                クライアントだけでなく<br>
+                                その先のお客様へクライアントの思いを届けること。
+                                理想を形作る。<br>そんなWebクリエイターを目指しています。
                             </p>
                         </div>
                     </div>
