--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             </div>
                             <div class="se-text">
                                 <p>VScode</p>
-                                <p>Windus</p>
+                                <p>Windows</p>
                                 <p>Mac</p>
                             </div>
                         </div>
